--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "preserveSymlinks": true,
             "outputPath": "dist/ngx-introjs",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -23,10 +24,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/intro.js/introjs.css",
               "src/styles.css"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": [
+              "node_modules/intro.js/intro.js"
+            ],
+            "es5BrowserSupport": true,
+            "aot": true
           },
           "configurations": {
             "production": {
@@ -124,6 +129,41 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "NgxIntroJs": {
+      "root": "projects/ngx-intro-js",
+      "sourceRoot": "projects/ngx-intro-js/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-intro-js/tsconfig.lib.json",
+            "project": "projects/ngx-intro-js/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-intro-js/src/test.ts",
+            "tsConfig": "projects/ngx-intro-js/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-intro-js/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-intro-js/tsconfig.lib.json",
+              "projects/ngx-intro-js/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
