--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
-  "name": "ngx-introjs",
-  "version": "0.0.0",
+  "name": "@esfaenza/ngx-introjs",
+  "version": "9.0.0-next.14",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:lib": "ng-packagr -p package.json"
   },
-  "private": true,
+  "ngPackage": {
+    "lib": {
+      "entryFile": "public_api.ts"
+    },
+    "whitelistedNonPeerDependencies": [
+      "."
+    ]
+  },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "@angular/animations": "9.0.0-next.14",
+    "@angular/common": "9.0.0-next.14",
+    "@angular/compiler": "9.0.0-next.14",
+    "@angular/core": "9.0.0-next.14",
+    "@angular/forms": "9.0.0-next.14",
+    "@angular/platform-browser": "9.0.0-next.14",
+    "@angular/platform-browser-dynamic": "9.0.0-next.14",
+    "@angular/router": "9.0.0-next.14",
+    "core-js": "2.5.3",
+    "intro.js": "github:EnergySoftwareFaenza/intro.js",
+    "rxjs": "6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "0.803.0-rc.0",
+    "@angular-devkit/build-ng-packagr": "0.802.2",
+    "@angular/cli": "9.0.0-next.18",
+    "@angular/compiler-cli": "9.0.0-next.14",
+    "@angular/language-service": "9.0.0-next.14",
+    "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -40,9 +50,16 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.7.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
-  }
+    "typescript": "3.6.4"
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.0.",
+  "main": "public_api.ts",
+  "author": "esfaenza",
+  "license": "ISC"
 }
