--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esfaenza/ngx-introjs",
-  "version": "9.0.0-next.14",
+  "version": "8.2.14",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,44 +19,44 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "9.0.0-next.14",
-    "@angular/common": "9.0.0-next.14",
-    "@angular/compiler": "9.0.0-next.14",
-    "@angular/core": "9.0.0-next.14",
-    "@angular/forms": "9.0.0-next.14",
-    "@angular/platform-browser": "9.0.0-next.14",
-    "@angular/platform-browser-dynamic": "9.0.0-next.14",
-    "@angular/router": "9.0.0-next.14",
-    "core-js": "2.5.3",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.803.24",
+    "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "intro.js": "github:EnergySoftwareFaenza/intro.js",
-    "rxjs": "6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "0.8.26"
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.0-rc.0",
-    "@angular-devkit/build-ng-packagr": "0.802.2",
-    "@angular/cli": "9.0.0-next.18",
-    "@angular/compiler-cli": "9.0.0-next.14",
-    "@angular/language-service": "9.0.0-next.14",
-    "@types/jasmine": "2.8.9",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular-devkit/build-ng-packagr": "~0.803.21",
+    "@angular/cli": "~8.3.21",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.7.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.6.4"
+    "tsickle": "^0.37.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.0.",
   "main": "public_api.ts",
