--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "lib": {
       "entryFile": "public_api.ts"
     },
-    "whitelistedNonPeerDependencies": [
-      "."
-    ]
+    "assets": [ "./syles/*.css" ],
+    "whitelistedNonPeerDependencies": [ "." ]
   },
   "dependencies": {
     "@angular/animations": "~9.0.0",
@@ -28,7 +27,6 @@
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@angular/service-worker": "~9.0.0",
-    "intro.js": "github:EnergySoftwareFaenza/intro.js",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
