--- a/package.json
+++ b/package.json
@@ -14,29 +14,33 @@
     "lib": {
       "entryFile": "public_api.ts"
     },
-    "assets": [ "./syles/*.css" ],
-    "whitelistedNonPeerDependencies": [ "." ]
+    "assets": [
+      "./syles/*.css"
+    ],
+    "whitelistedNonPeerDependencies": [
+      "."
+    ]
   },
   "dependencies": {
-    "@angular/animations": "~9.0.0",
-    "@angular/common": "~9.0.0",
-    "@angular/compiler": "~9.0.0",
-    "@angular/core": "~9.0.0",
-    "@angular/forms": "~9.0.0",
-    "@angular/platform-browser": "~9.0.0",
-    "@angular/platform-browser-dynamic": "~9.0.0",
-    "@angular/router": "~9.0.0",
-    "@angular/service-worker": "~9.0.0",
+    "@angular/animations": "~9.0.5",
+    "@angular/common": "~9.0.5",
+    "@angular/compiler": "~9.0.5",
+    "@angular/core": "~9.0.5",
+    "@angular/forms": "~9.0.5",
+    "@angular/platform-browser": "~9.0.5",
+    "@angular/platform-browser-dynamic": "~9.0.5",
+    "@angular/router": "~9.0.5",
+    "@angular/service-worker": "~9.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular-devkit/build-ng-packagr": "~0.900.1",
-    "@angular/cli": "~9.0.1",
-    "@angular/compiler-cli": "~9.0.0",
-    "@angular/language-service": "~9.0.0",
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular-devkit/build-ng-packagr": "~0.900.5",
+    "@angular/cli": "~9.0.5",
+    "@angular/compiler-cli": "~9.0.5",
+    "@angular/language-service": "~9.0.5",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -54,7 +58,6 @@
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
   },
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.0.",
   "main": "public_api.ts",
   "author": "esfaenza",
   "license": "ISC"
